test #28 : Product 관련 테스트 코드 수정